<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="我是一个兵，造福老百姓!" />
            <Button
                android:id="@+id/btnSimpleNotification"
                android:layout_width="wrap_content"
                android:text="@string/button_simple_notification"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/btnSimpleNotificationV11"
                android:layout_width="wrap_content"
                android:text="@string/button_simple_notificationv11"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/btnSimpleNotificationV16"
                android:layout_width="wrap_content"
                android:text="@string/button_simple_notificationv16"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/btnSimpleNotificationVSelf"
                android:layout_width="wrap_content"
                android:text="@string/button_simple_notificationvself"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/btnSimpleNotificationVSelfCPX"
                android:layout_width="wrap_content"
                android:text="@string/button_simple_notificationvselfCPX"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/btnPrintALl"
                android:layout_width="wrap_content"
                android:text="@string/button_print_All"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/btnShowKugou"
                android:layout_width="wrap_content"
                android:text="@string/button_show_kugou"
                android:onClick="onClick"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/btnClearAll"
                android:layout_width="wrap_content"
                android:onClick="onClick"
                android:text="@string/button_clear_all"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/btnLast"
                android:layout_width="wrap_content"
                android:onClick="onClick"
                android:text="@string/button_clear_last"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
